applications/pc-broker/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pc-broker
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
