applications/pc-broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pc-broker-service
  namespace: pc-broker
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: pc-broker
